views: show hover shadows for buttons on Mac

Button hover shadows are implemented as part of the ink drop code, which has a
separate layer that it uses to draw these kinds of effects. The Mac code thus
far has stubbed out ink drops, but that prevents the effects layer from being
created, which prevents drop shadows from being drawn. This change causes
the ink drop code to still create the effects layer, but to draw the actual
ink drop itself with zero opacity on button press, so other effects that
depend on the ink drop code still work.

Note that controls which explicitly set their ink drop opacity (ie, don't just
use the default) will still get ink drops *even if* PlatformStyle disables
them. At the moment these controls are almost entirely ChromeOS-specific, but
a more principled approach to disabling ink drops for Mac might be in order
later.

Bug: 654783
Change-Id: I4caeabc6511a22fe3cdd457d0c78c77798a14f56
Reviewed-on: https://chromium-review.googlesource.com/602253
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Ben Ruthig <bruthig@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492987}
Former-commit-id: dde3e544e6852a99205b605c80778e5b0096ebee