ui/views/animation/ink_drop_host_view.cc
@@ -118,7 +118,8 @@ gfx::Size InkDropHostView::CalculateLargeInkDropSize(
 InkDropHostView::InkDropHostView()
     : ink_drop_mode_(InkDropMode::OFF),
       ink_drop_(nullptr),
-      ink_drop_visible_opacity_(kInkDropVisibleOpacity),
+      ink_drop_visible_opacity_(
+          PlatformStyle::kUseRipples ? kInkDropVisibleOpacity : 0),
       old_paint_to_layer_(false),
       destroying_(false) {}
 
@@ -277,7 +278,7 @@ bool InkDropHostView::HasInkDrop() const {
 
 InkDrop* InkDropHostView::GetInkDrop() {
   if (!ink_drop_) {
-    if (ink_drop_mode_ == InkDropMode::OFF || !PlatformStyle::kUseRipples)
+    if (ink_drop_mode_ == InkDropMode::OFF)
       ink_drop_ = base::MakeUnique<InkDropStub>();
     else
       ink_drop_ = CreateInkDrop();
